Fix tests for Config::getFullPath()

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -8,3 +8,4 @@ array.1 = two
 env.in.value = "TEST_ENV={{TEST_ENV}}"
 env.from.outside = inside
 comma.separated = 1, 2, 3
+app.root_path = "app_root_path"
