--- a/configs/config.ini
+++ b/configs/config.ini
@@ -6,6 +6,7 @@ bool.false = false
 array.0 = one
 array.1 = two
 env.in.value = "TEST_ENV={{TEST_ENV}}"
+env.non_existing_env = "NON_EXISTING_ENV={{NON_EXISTING_ENV}}"
 env.from.outside = inside
 comma.separated = 1, 2, 3
 app.root_path = "app_root_path"
